infra/k8s/accounts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
        - name: accounts
          image: ndhlovu/accounts
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-srv
spec:
  selector:
    app: accounts
  ports:
    - name: accounts
      protocol: TCP
      port: 3000
      targetPort: 3000
