infra/k8s/accounts-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-mongo
  template:
    metadata:
      labels:
        app: accounts-mongo
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: accounts-db-pvc

      containers:
        - name: accounts-mongo
          image: mongo
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db

---
apiVersion: v1
kind: Service
metadata:
  name: accounts-mongo-srv
spec:
  selector:
    app: accounts-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
