infra/k8s/boards-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boards-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boards
  template:
    metadata:
      labels:
        app: boards
    spec:
      containers:
        - name: boards
          image: ndhlovu/boards
---
apiVersion: v1
kind: Service
metadata:
  name: boards-srv
spec:
  selector:
    app: boards
  ports:
    - name: boards
      protocol: TCP
      port: 3000
      targetPort: 3000
