infra/k8s/email-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
        - name: email
          image: ndhlovu/email
          resources:
            limits:
              memory: 512Mi
              cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
  name: email-srv
spec:
  selector:
    app: email
  ports:
    - name: email
      protocol: TCP
      port: 3000
      targetPort: 3000
