infra/k8s/email-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-mongo
  template:
    metadata:
      labels:
        app: email-mongo
    spec:
      containers:
        - name: email-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: email-mongo-srv
spec:
  selector:
    app: email-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
