infra/k8s/upgrades-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upgrades-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upgrades
  template:
    metadata:
      labels:
        app: upgrades
    spec:
      containers:
        - name: upgrades
          image: ndhlovu/upgrades
---
apiVersion: v1
kind: Service
metadata:
  name: upgrades-srv
spec:
  selector:
    app: upgrades
  ports:
    - name: upgrades
      protocol: TCP
      port: 3000
      targetPort: 3000
